--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1663,4 +1663,5 @@ input, select, textarea {
 		.project-details {
 			transition: all 0.3s ease-in-out;
 			overflow: hidden;
+			cursor: pointer;
 		}
